[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features=[ "std", "registry", "env-filter", "fmt"]}
serde = { version="1.0.175", features= ["derive"] }
serde_json = "1.0.103"
chrono = { version = "0.4.26", features = ["serde"] }

#jsonwebtoken={ version="8.3.0", features=["use_pem"]}

#[patch.crates-io]
jsonwebtoken = { path = "./fork-jsonwebtoken" }